[package]
name = "lune-std-ffi"
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - FFI"

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = "1.1"

[dependencies]
mlua = { version = "0.11.3", features = ["luau"] }
cfg-if = "1.0"
libffi = "4.1.2"

lune-utils = { version = "0.3.2", path = "../lune-utils" }
